package org.cheeryworks.liteql.schema.enums;

public enum IndexType {

    Unique, Normal

}
