package org.cheeryworks.liteql.schema.enums;

public enum MigrationOperationType {

    CREATE_TYPE,
    DROP_TYPE,
    CREATE_FIELD,
    DROP_FIELD,
    CREATE_UNIQUE,
    DROP_UNIQUE,
    CREATE_INDEX,
    DROP_INDEX,
    DATA_MIGRATION

}
